--- a/.eslintrc
+++ b/.eslintrc
@@ -5,30 +5,38 @@
   },
   "ignorePatterns": ["node_modules", "dist", "build"],
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings"
+    "airbnb",
+    "airbnb/hooks",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier", "import"],
+  "plugins": ["react", "react-hooks", "import", "jsx-a11y"],
   "rules": {
-    "indent": ["error", 2],
-    "prettier/prettier": "error",
+    "indent": ["error", 2, {"SwitchCase": 1}],
+    "max-len": ["error", { "code": 120 }],
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
-    "semi": [2,"always"],
+    "jsx-quotes": [2, "prefer-single"],
+    "semi": ["error", "always"],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/label-has-associated-control": 0,
+    "import/no-named-as-default": 0,
+    "import/default": 0,
+    "import/no-named-as-default-member": 0,
+    "import/namespace": 0,
+    "react/destructuring-assignment": "off",
+    "react/jsx-props-no-spreading": "off",
+    "default-param-last": 0,
+    "no-param-reassign": "off",
     "import/order": [
       2,
       {
@@ -45,6 +53,7 @@
     ]
   },
   "settings": {
+    "version": "detect",
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
