--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+  "semi": true,
+  "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "all",
-  "endOfLine": "auto",
-  "printWidth": 120,
-  "semi": true
+  "bracketSpacing": true,
+  "jsxSingleQuote": true
 }
